--- a/index.html
+++ b/index.html
@@ -445,6 +445,21 @@
             return rows;
         }
 
+        function filterProducts() {
+    const searchInput = document.getElementById('searchProduct').value.toLowerCase();
+    const itemList = document.querySelector('.item-list');
+    const items = itemList.querySelectorAll('.item');
+
+    items.forEach(item => {
+        const productName = item.querySelector('h4').textContent.toLowerCase();
+        if (productName.includes(searchInput)) {
+            item.style.display = 'block'; // Show the item if it matches the search
+        } else {
+            item.style.display = 'none'; // Hide the item if it doesn't match
+        }
+    });
+}
+
         renderItems();
         updateTables();
     </script>
